# Air_Central

./: .gitignore  CMakeLists.txt  Esp_bridge.ino  Esp_comunication.ino  Main.qml  README.md  TelaCadastro.qml  TelaLista.qml  emissor.ino  esp_bridge.ino  esp_bridge32.ino  esp_comunicationV2.ino  esp_node.ino  main.cpp  main.qmodel  platformio.ini  receivedata.cpp  receivedata.h  receptor.ino  saci_ci.py  savedata.cpp  savedata.h  senddata.cpp  senddata.h
include/: bridge.h  node.h
qml/: Main.qml  TelaLista.qml
scripts/: saci_ci.py
src/: bridge.cpp  main.cpp  node.cpp  receivedata.cpp  receivedata.h  savedata.cpp  savedata.h  senddata.cpp  senddata.h
